# PredictDesign

./: .gitignore  README.md  pyproject.toml
examples/: llm_api_predictor_example.py  minimal_demo.py  rt_demo.py
predictdesign/: __init__.py  aggregation.py  completion.py  config.py  ctdg.py  encoders.py  experiment.py  messages.py  prediction.py  query_parser.py  temporal_graph.py  types.py
predictdesign/benchmark/: __init__.py  evaluator.py  multiagentbench.py  rich_log.py  trainer.py  types.py
predictdesign/gnn/: __init__.py  cold_start.py  layers.py  predictor.py
predictdesign/llm/: __init__.py  api_predictor.py
predictdesign/state_update/: __init__.py  base.py  gru.py  mdp.py
results/parallel_api_test/: parallel_api_config_summary.json  parallel_api_run_summary.json
results/parallel_api_test/coding_outputs/: task_10_result.jsonl  task_11_result.jsonl  task_12_result.jsonl  task_13_result.jsonl  task_14_result.jsonl  task_15_result.jsonl  task_16_result.jsonl  task_17_result.jsonl  task_18_result.jsonl  task_19_result.jsonl  task_1_result.jsonl  task_20_result.jsonl  task_21_result.jsonl  task_22_result.jsonl  task_23_result.jsonl  task_24_result.jsonl  task_25_result.jsonl  task_26_result.jsonl  task_27_result.jsonl  (+41 more)
scripts/: export_rich_log.py  launch_llm_eval_only_from_existing.sh  launch_persistent_full_runs.sh  launch_unified_suite.sh  monitor_full_runs.py  run_local_qwen_multiagentbench.py  run_marble_hitk_benchmark.py  run_multiagentbench_eval.py  run_parallel_api_rich_logs.py  train_rich_log_mlp.py
tests/: test_predictdesign.py
(+1167 files in other folders)
