[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictdesign"
version = "0.2.0"
description = "Modular experimental framework for temporal multi-agent collaboration graph prediction."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pdfplumber"]

[tool.setuptools.packages.find]
where = ["."]
include = ["predictdesign*"]
